fix overflow + bg image

--- a/index.css
+++ b/index.css
@@ -3,6 +3,9 @@ body {
     text-align: center;
     background: url("assets/bg.jpg") center no-repeat;
     background-size: cover;
+    max-width: 100%;
+    max-height: 100%;
+    overflow: hidden;
 }
 
 button {
